--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -5,8 +5,7 @@
 </head>
 <body>
 
-<h2>Clickable Dropdown</h2>
-<p>Click on the button to open the dropdown menu.</p>
+
 
 <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Immediate Obligations</button>
@@ -37,7 +36,63 @@
     
   </div>
 </div>
-
+<br><br>
+<div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn">True Expenses</button>
+        <div id="myDropdown" class="dropdown-content">
+          <div><h3></h3>ADD the pocket</h3>
+              <button class="add" onclick="add()">+</button>
+                  <div class="form-popup" id="add">
+                      <form action="" class="form-container">
+                          <h1>ADD THE POCKET</h1>
+                          <label for="name"><b>NAME</b></label>
+                          <input type="text" placeholder="pocket name" name="name" required>
+                          <button type="submit" class="btn">Enter</button>
+                          <button type="button" class="btn cancel" onclick="closeadd()">Close</button>
+                      </form>
+                  </div>  
+                  </div>  
+                  <div class='rent'>
+                          <button class="open-button" onclick="openedit()">Rent</button>
+                          <div class="form-popup" id="myedit">
+                            <form action="" class="form-container">
+                                  <h1>EDIT POCKET</h1>
+                                  <label for="name"><b>NAME</b></label>
+                                  <label for="amount"><b>AMOUNT</b></label>
+                             <a href = '/form'><input type="button" class="btn " value="Edit"></a> </form></div>
+                          </div>
+                        </div>
+      </div>
+      <br><br>
+      <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">Pleasures</button>
+            <div id="myDropdown" class="dropdown-content">
+              <div><h3></h3>ADD the pocket</h3>
+                  <button class="add" onclick="add()">+</button>
+                      <div class="form-popup" id="add">
+                          <form action="" class="form-container">
+                              <h1>ADD THE POCKET</h1>
+                              <label for="name"><b>NAME</b></label>
+                              <input type="text" placeholder="pocket name" name="name" required>
+                              <button type="submit" class="btn">Enter</button>
+                              <button type="button" class="btn cancel" onclick="closeadd()">Close</button>
+                          </form>
+                      </div>  
+                      </div>  
+                      <div class='rent'>
+                              <button class="open-button" onclick="openedit()">Rent</button>
+                              <div class="form-popup" id="myedit">
+                                <form action="" class="form-container">
+                                      <h1>EDIT POCKET</h1>
+                                      <label for="name"><b>NAME</b></label>
+                                      <label for="amount"><b>AMOUNT</b></label>
+                                 <a href = '/form'><input type="button" class="btn " value="Edit"></a> </form></div>
+                                 
+                              </div>
+          
+              
+            </div>
+          </div>
 <script>
 /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
