--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,131 +1,17 @@
 <html><head>
     <title>dbchjdb</title>
-    <style>
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
-hmb
-/* Button used to open the contact form - fixed at the bottom of the page */
-.open-button {
-  background-color: #555;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  
-  width: 280px;
-}
 
-
-/* The popup form - hidden by default */
-.form-popup {
-  display: none;
-  position: fixed;
-  bottom: 150px;
-  right: 750px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-.form-pop {
-  display: none;
-  position: fixed;
-  bottom: 150px;
-  right: 750px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-
-/* Add styles to the form container */
-.form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
-}
-
-/* Full-width input fields */
-.form-container input[type=text], .form-container input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
-}
-
-/* When the inputs get focus, do something */
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Set a style for the submit/login button */
-.form-container .btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
-}
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
-}
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown a:hover {background-color: #ddd;}
-  
-  .show {display: block;}
-</style>
 </head>
-<body><div class="form-popup" id="myForm">
+<!--<link href="/stylesheets/form.css" rel="stylesheet" /> -->
+<body>
+
     <form action="" class="form-container">
           <h1>BUSINESS POCKET</h1>
-          <label for="name"><b>NAME</b></label>
-          <input type="text" value="BUSINESS" name="name" required>
-          <label for="amount"><b>AMOUNT</b></label>
-          <input type="text" placeholder="Enter Value" name="ammount" required>
-  <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+          <label for="name"><b>NAME</b></label><br>
+          <input type="text" value="BUSINESS" name="name" required><br>
+          <label for="amount"><b>AMOUNT</b></label><br>
+          <input type="text" placeholder="Enter Value" name="ammount" required><br>
+  <button type="button" class="btn" onclick="">Submit</button>
 </form>
 </div>
 </body>
